# gpu_collision_detection_bevy

./: Cargo.toml  README.md  output.json  output_from_direct_runs.json  output_from_direct_runs.json.archive  output_from_script.json  package-lock.json  run_config.json  script.ipynb
docs/: _config.yml  index.markdown
docs/_posts/: 2024-12-20-welcome-to-jekyll.markdown
project/: Cargo.toml  output_from_direct_runs.json  output_from_script.json  run_config.json  run_tests.ipynb  t.ts
project/src/: collision_processing.rs  components_and_resources.rs  performance.rs
project/src/bevy_gpu_compute_collision_detection/: mod.rs  shader.rs
project/src/cpu_collision_detection/: cpu_collision_detection.rs  mod.rs
project/src/gpu_collision_detection/: collision.wgsl  collision.wgsl.archive2  create_gpu_task.rs  custom_schedule.rs  get_collidables.rs  mod.rs  plugin.rs  resources.rs  shader.rs  shareable_gpu_resources.rs  wgsl_processable_types.rs
project/src/helpers/: gpu.rs  mod.rs
src/: colliding_pair.rs  collision_detection_performance_test.rs  collision_detection_plugin.rs  collision_processing.rs  components_and_resources.rs  config.rs  entity_movement.rs  entity_spawning.rs  headless_entity_spawning.rs  main.rs  performance.rs
src/cpu_collision_detection/: cpu_collision_detection.rs
src/gpu_collision_detection/: README.md  get_collidables.rs  mod.rs  plugin.rs  resources.rs  wgsl_processable_types.rs
src/graphics/: camera.rs  colors_and_handles.rs  mod.rs  plugin.rs
src/helpers/: mod.rs  pick_random_from_vec.rs  vec2_serializer.rs
(+50 files in other folders)
